--- a/index.html
+++ b/index.html
@@ -76,117 +76,102 @@
 
 
       <div class="container">
-        <div class="row">
-          <div id="gallery">
-            <h2>Gallery</h2>
-            <div class="col-xs-6">
-              <img src="img/balloon-1.jpg" alt="view" class="img-responsive"></img>
-              <img src="img/balloon-2.jpg" alt="fire ballon" class="img-responsive"></img>
-              <img src="img/balloon-3.jpg" alt="purple balloon" class="img-responsive"></img>
-              <img src="img/balloon-4.jpg" alt="closeup" class="img-responsive"></img>
-              <img src="img/balloon-5.jpg" alt="shadow" class="img-responsive"></img>
-              <img src="img/balloon-6.jpg" alt="firing up" class="img-responsive"></img>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div id="Testimonials">
-          <h2>Testimonials: Just a few of our happy customers</h2>
-          <blockquote>
-            <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
-          </blockquote>
-          <blockquote>
-            <p>"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p>
-          </blockquote>
-          <blockquote>
-            <p>"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p>
-          </blockquote>
-          <blockquote>
-            <p>"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
-          </blockquote>
-          <blockquote>
-            <p>"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
-          </blockquote>
-          <blockquote>
-            <p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
-          </blockquote>
-
-        </div>
-      </div>
-
-      <div id="contact info" class="container">
-        <h2>Contact: We’d love to hear from you</h2><br>
-        <p>Address SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p><br>
-        <p><span class="glyphicon glyphicon-earphone">Phone: (555) 555-1234</p></span><br>
-          <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
-
-      </div>
-
-      <div class="container">
-        <h2>Carousel Example</h2>
-
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
-          <!-- Indicators -->
-          <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
-            <li data-target="#myCarousel" data-slide-to="5"></li>
+        <div id="gallery">
+          <h2>Gallery</h2>
+          <div class="container">
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+                <li data-target="#myCarousel" data-slide-to="5"></li>
 
 
-          </ol>
+              </ol>
 
-          <!-- Wrapper for slides -->
+              <!-- Wrapper for slides -->
 
 
-          <div class="carousel-inner">
+              <div class="carousel-inner">
 
-            <div class="item active">
-              <img src="img/balloon-1.jpg" alt="view" class="img-responsive">
-              <div class="carousel-caption">
+                <div class="item active">
+                  <img src="img/balloon-1.jpg" alt="view" class="img-responsive">
+                  <div class="carousel-caption">
 
-              </div>
-            </div>
+                  </div>
+                </div>
 
-            <div class="item">
-              <img src="img/balloon-2.jpg" alt="fire balloon" class="img-thumbnail">
-              <div class="carousel-caption">
+                <div class="item">
+                  <img src="img/balloon-2.jpg" alt="fire balloon" class="img-thumbnail">
+                  <div class="carousel-caption">
 
-              </div>
-            </div>
+                  </div>
+                </div>
 
-            <div class="item">
-              <img src="img/balloon-3.jpg" alt="purple balloon" class="img-thumbnail">
-              <div class="carousel-caption">
+                <div class="item">
+                  <img src="img/balloon-3.jpg" alt="purple balloon" class="img-thumbnail">
+                  <div class="carousel-caption">
 
-              </div>
-            </div>
-            <div class="item">
-              <img src="img/balloon-4.jpg" alt="closeup" class="img-thumbnail">
-              <div class="carousel-caption">
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="img/balloon-4.jpg" alt="closeup" class="img-thumbnail">
+                  <div class="carousel-caption">
 
-              </div>
-            </div>
-            <div class="item">
-              <img src="img/balloon-5.jpg" alt="shadow" class="img-thumbnail">
-              <div class="carousel-caption">
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="img/balloon-5.jpg" alt="shadow" class="img-thumbnail">
+                  <div class="carousel-caption">
 
-              </div>
-            </div>
-            <div class="item">
-              <img src="img/balloon-6.jpg" alt="firing up" class="img-thumbnail">
-              <div class="carousel-caption">
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="img/balloon-6.jpg" alt="firing up" class="img-thumbnail">
+                  <div class="carousel-caption">
+
+                  </div>
+
+                </div>
 
               </div>
 
             </div>
+            <div class="container">
+              <div id="Testimonials">
+                <h2>Testimonials: Just a few of our happy customers</h2>
+                <blockquote>
+                  <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
+                </blockquote>
+                <blockquote>
+                  <p>"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p>
+                </blockquote>
+                <blockquote>
+                  <p>"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p>
+                </blockquote>
+                <blockquote>
+                  <p>"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
+                </blockquote>
+                <blockquote>
+                  <p>"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
+                </blockquote>
+                <blockquote>
+                  <p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
+                </blockquote>
 
-          </div>
+              </div>
+            </div>
 
-        </div>
+            <div id="contact info" class="container">
+              <h2>Contact: We’d love to hear from you</h2><br>
+              <p>Address: SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p><br>
+              <p><span class="glyphicon glyphicon-earphone">Phone: (555) 555-1234</p></span><br>
+                <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
+
+            </div>
 
 
 
