--- a/index.html
+++ b/index.html
@@ -56,11 +56,8 @@
     <p>Afraid of heights? You won't be after you slow-dance with the sky.</p>
 
   </div>
-  <div class="container">
-    <div id="info" class="jumbotron">
-      <div class="panel panel-default">
-        <div class="panel-heading">Info: All the information you'll need </div>
         <div class="panel-body">
+          <h2>Info: All the information you'll need </h2>
           <h4>Time</h4>
           <p>Due to climatic conditions, we can safely fly only in the early morning hours with our primary season and most beautiful months being May through November. Since our launch times vary through the seasons, we ask all our guests to call ahead
             for the exact meeting time.</p>
@@ -74,57 +71,8 @@
         </div>
       </div>
 
-
       <div class="container">
-        <div class="row">
-          <div id="gallery">
-            <h2>Gallery</h2>
-            <div class="col-xs-6">
-              <img src="img/balloon-1.jpg" alt="view" class="img-responsive"></img>
-              <img src="img/balloon-2.jpg" alt="fire ballon" class="img-responsive"></img>
-              <img src="img/balloon-3.jpg" alt="purple balloon" class="img-responsive"></img>
-              <img src="img/balloon-4.jpg" alt="closeup" class="img-responsive"></img>
-              <img src="img/balloon-5.jpg" alt="shadow" class="img-responsive"></img>
-              <img src="img/balloon-6.jpg" alt="firing up" class="img-responsive"></img>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <div id="Testimonials">
-          <h2>Testimonials: Just a few of our happy customers</h2>
-          <blockquote>
-            <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
-          </blockquote>
-          <blockquote>
-            <p>"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p>
-          </blockquote>
-          <blockquote>
-            <p>"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p>
-          </blockquote>
-          <blockquote>
-            <p>"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
-          </blockquote>
-          <blockquote>
-            <p>"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
-          </blockquote>
-          <blockquote>
-            <p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
-          </blockquote>
-
-        </div>
-      </div>
-
-      <div id="contact info" class="container">
-        <h2>Contact: We’d love to hear from you</h2><br>
-        <p>Address SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p><br>
-        <p><span class="glyphicon glyphicon-earphone">Phone: (555) 555-1234</p></span><br>
-          <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
-
-      </div>
-
-      <div class="container">
-        <h2>Carousel Example</h2>
+        <h2>Gallery</h2>
 
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
@@ -187,6 +135,40 @@
           </div>
 
         </div>
+      <div class="container">
+        <div id="Testimonials">
+          <h2>Testimonials: Just a few of our happy customers</h2>
+          <blockquote>
+            <p>"Thank you for a wonderful memory. I was smiling the entire time. We shall always cherish that morning!" -- Joan H.</p>
+          </blockquote>
+          <blockquote>
+            <p>"I haven't come down to earth since our balloon ride. We are so pleased that we chose SHABR." -- Marsha N.</p>
+          </blockquote>
+          <blockquote>
+            <p>"Thanks so much for making our experience so perfect. I definitely want to go back again! -- Linda T.</p>
+          </blockquote>
+          <blockquote>
+            <p>"What an experience!! I can't stop talking about it with my family. Thank you for the life-long memory!" -- Tammy P.</p>
+          </blockquote>
+          <blockquote>
+            <p>"Thank you so much for the experience. It was delightful - awesome - wonderful - I will never forget my 80th Birthday!" -- Ethel E.</p>
+          </blockquote>
+          <blockquote>
+            <p>"What an awesome way to remember my anniversary! I know I will always remember this experience. Thank you again!" -- Mary C.</p>
+          </blockquote>
+
+        </div>
+      </div>
+
+      <div id="contact info" class="container">
+        <h2>Contact: We’d love to hear from you</h2><br>
+        <p>Address SHABR, Inc. 1234 Shabr Road Somewhere, OT 80013</p><br>
+        <p><span class="glyphicon glyphicon-earphone">Phone: (555)555-1234</p></span><br>
+          <p>Copyright © 2016 | <abbr title="Skydance Hot Air Ballon Rides">SHABR</abbr></p>
+
+      </div>
+
+
 
 
 
@@ -198,7 +180,7 @@
 <!-- Bootstrap CSS Used: 
     
     1.navbar
-    2.carousel(still working on making the image appear after clicking each data-target)
+    2.carousel
     3.glyphicon
     4.jumbotron
     5.image
