--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <a class="navbar-brand" href="#">Up, Up and Away...</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active">
+          <a href="#">Home</a></li>
         <li><a href="#info">Info</a></li>
         <li><a href="#gallery">Gallery</a></li>
         <li><a href="#Testimonials">Testimonial</a></li>
@@ -39,7 +40,7 @@
   </nav>
 
   <div class="title" id="pageopen">
-    <h1 id="colored"> Skydance Hot Air Balloon Rides  </h1>
+    <h1 id="colored"> Skydance Hot Air Balloon Rides</h1>
     <h3 id="colored-2">Ride with the wind. Dance with the sky.</h3>
   </div>
 
@@ -50,24 +51,24 @@
   </div>
 
   <div class="context">
-    <h2>Home: Fun for Everyone</h2>
-    <p>Come make a new memory with us. There's nothing else like it.</p>
-    <p>Fun for both adults and kids. All are welcome!</p>
-    <p>Afraid of heights? You won't be after you slow-dance with the sky.</p>
+    <h2 id="home">Home: Fun for Everyone</h2>
+    <p id="home-text">Come make a new memory with us. There's nothing else like it.</p>
+    <p id="home-text">Fun for both adults and kids. All are welcome!</p>
+    <p id="home-text">Afraid of heights? You won't be after you slow-dance with the sky.</p>
 
   </div>
         <div class="panel-body">
-          <h2>Info: All the information you'll need </h2>
-          <h4>Time</h4>
-          <p>Due to climatic conditions, we can safely fly only in the early morning hours with our primary season and most beautiful months being May through November. Since our launch times vary through the seasons, we ask all our guests to call ahead
+          <h2 id="info">Info: All the information you'll need </h2>
+          <h4 id="heads">Time</h4>
+          <p id="para">Due to climatic conditions, we can safely fly only in the early morning hours with our primary season and most beautiful months being May through November. Since our launch times vary through the seasons, we ask all our guests to call ahead
             for the exact meeting time.</p>
-          <h4>Weather</h4>
-          <p>High winds and/or inclement weather prevent us from flying. We ask all our guests to contact us in the early afternoon prior to their scheduled flight between 12:00 noon and 2:00 p.m. to verify that the forecasted weather conditions will allow
+          <h4 id="heads">Weather</h4>
+          <p id="para">High winds and/or inclement weather prevent us from flying. We ask all our guests to contact us in the early afternoon prior to their scheduled flight between 12:00 noon and 2:00 p.m. to verify that the forecasted weather conditions will allow
             their balloon flight.</p>
-          <h4>Flight</h4>
-          <p>Our actual flight time is approximately one to one and a half hours averaging closer to one and a half hours and we suggest to allow three to three and a half hours for the entire adventure.</p>
-          <h4>Participation</h4>
-          <p>We encourage all of our guests, if they wish, to participate in both the inflation and deflation of the balloon. We have found it adds greatly to the fun of the entire ballooning experience.</p>
+          <h4 id="heads">Flight</h4>
+          <p id="para">Our actual flight time is approximately one to one and a half hours averaging closer to one and a half hours and we suggest to allow three to three and a half hours for the entire adventure.</p>
+          <h4 id="heads">Participation</h4>
+          <p id="para">We encourage all of our guests, if they wish, to participate in both the inflation and deflation of the balloon. We have found it adds greatly to the fun of the entire ballooning experience.</p>
         </div>
       </div>
 
